--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" type="text/css" href="css/style1.css">
+    <link rel="stylesheet" type="text/css" href="css/style1.css"> 
     <link rel="stylesheet" type="text/css" href="css/demo.css">
   <!-- <link  rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-     -->
+      -->
 
     
-    <title>Document</title>
+    <title>Example Site</title>
 </head>
 <body>
-    <h1>Name</h1><input type="text" id="name" placeholder="name" aria-required="true"><br>
+    <h1>Name</h1><input type="text" id="name" placeholder="name" aria-required="true" required><br>
     <br>
     <h1>Email</h1><input type="string" id="email" placeholder="Email"><br>
     <br>
