--- a/sign up.html
+++ b/sign up.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" type="text/css" href="css/demo.css">
 </head>
 <body>
-    <h1>Name</h1><input type="text" id="name" placeholder="name" re><br>
+    <h1>Name</h1><input type="text" id="name" placeholder="name"> <li class="rq"> * Enter alphabets only.</li><br>
     <br>
-    <h1>Email</h1><input type="email" id="email" placeholder="Email"><br>
+    <h1>Email</h1><input type="email" id="email" placeholder="Email" maxlength="10"/><br>
     <br>
     <h1>Phone number</h1><input type="number" id="number" placeholder="Phone number"><br>
     <br>
@@ -20,6 +20,7 @@
     <br>
     <h1>Confirm password</h1><input id="confirmpassword" type="password" placeholder="Confirm password"><br>
     <br>
+    <script src="js/allLetter.js"> </script>
     <!-- <button type="button" id="button2" ><a href="index.js">Sign up</a></button>
     <script src="index.js"></script>
     <button type="button" id="increment-btn" onclick="increment()">INCREMENT</button>
@@ -28,7 +29,8 @@
         <div class="wrap-login100-form-btn">
         <div class="login100-form-bgbtn"></div>
         <button class="login100-form-btn">
-       <a href="profile.html">Sign up</a> 
+       
+        <a onclick="allLetter(document.form1.text1)">Sign up</a> 
         </button>
         </div>
         </div>
