--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="wrap-login100-form-btn">
         <div class="login100-form-bgbtn"></div>
         <button class="login100-form-btn">
-       <a href="profile.html">Login</a> 
+       <a href="main.html">Login</a> 
         </button>
         </div>
         </div>
