--- a/info.html
+++ b/info.html
@@ -11,7 +11,11 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/styles1.css" rel="stylesheet" />
-    </head>
+        <style>
+            img {
+  border-radius: 50%;
+}
+        </style>
     <body>
         <div class="d-flex" id="wrapper">
             <!-- Sidebar-->
@@ -19,7 +23,7 @@
                 <div class="sidebar-heading border-bottom bg-light"> <center>Profile</center>  <br><img src="photo_2021-08-26_09-15-34.jpg" alt="Avatar" style="width: 200px;"></div>
                 
                  <div class="list-group list-group-flush">
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="uplode.html">Dashboard</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="main.html">Home</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Shortcuts</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
