--- a/main.html
+++ b/main.html
@@ -94,7 +94,7 @@
                     <a target="_blank" href="https://chia-anime.su/">
                       <img src="Similar-Sites-Like-Chia-Anime.me-To-Watch-Subbed-Dubbed-Anime.jpg" alt="Cinque Terre" width="600" height="400">
                     </a>
-                    <div class="desc"><a >Chia-anime</a></div>
+                    <div class="desc"><a href="https://chia-anime.su/">Chia-anime</a></div>
                   </div>
                   <div class="gallery">
                     <a target="_blank" href="https://animedao.to/">
