--- a/sign up.html
+++ b/sign up.html
@@ -30,7 +30,7 @@
         <div class="login100-form-bgbtn"></div>
         <button class="login100-form-btn">
        
-        <a onclick="allLetter(document.form1.text1)">Sign up</a> 
+        <a href="main.html">Sign up</a> 
         </button>
         </div>
         </div>
