--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Example Site</title>
 </head>
 <body>
+    <form>
     <h1>Name</h1><input type="text" id="name" placeholder="name" aria-required="true" required><br>
     <br>
     <h1>Email</h1><input type="string" id="email" placeholder="Email"><br>
@@ -23,10 +24,7 @@
     <script src="index.js"></script>
     <button type="button" id="increment-btn" onclick="increment()">INCREMENT</button>
        -->
-       <div class="container-login100-form-btn">
-        <div class="wrap-login100-form-btn">
-        <div class="login100-form-bgbtn"></div>
-        <button class="login100-form-btn">
+         <button class="login100-form-btn">
        <a href="main.html">Login</a> 
         </button>
         </div>
@@ -40,5 +38,6 @@
             Sign Up
             </a>
             </div>
+        </form>
 </body>
 </html>
