--- a/index.html
+++ b/index.html
@@ -4,40 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" type="text/css" href="css/style1.css"> 
-    <link rel="stylesheet" type="text/css" href="css/demo.css">
-  <!-- <link  rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-      -->
-
-    
-    <title>Example Site</title>
+    <title>Login</title>
+    <link href="background/background.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="bubbles">
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+     <div class="contener">
     <form>
-    <h1>Name</h1><input type="text" id="name" placeholder="name" aria-required="true" required><br>
-    <br>
-    <h1>Email</h1><input type="string" id="email" placeholder="Email"><br>
-    <br>
-    <h1>Password</h1><input id ="password" type="password" placeholder="password"><br><br>
-    <!-- <button type="button" id="button2" ><a href="index.js">Sign up</a></button>
-    <script src="index.js"></script>
-    <button type="button" id="increment-btn" onclick="increment()">INCREMENT</button>
-       -->
-         <button class="login100-form-btn">
-       <a href="main.html">Login</a> 
+        <input class="input1" type="text" placeholder="Name" required>
+        <p></p>
+        <input class="input1" type="password" placeholder="Password" required>
+        <p></p>
+        <button class="login12" onclick="window.location.href='main.html'">
+            Login
         </button>
-        </div>
-        </div>
-        <br>
-        <div class="text-center p-t-115">
-            <span class="txt1">
-            Don’t have an account?
-            </span>
-            <a class="txt2" href="sign up.html">
-            Sign Up
-            </a>
-            </div>
+        <p class="p1">i don't have an account?<a href="sign up.html"> Signup</a></p>
         </form>
+</div>
+</div>
 </body>
 </html>
