--- a/main.html
+++ b/main.html
@@ -10,8 +10,7 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/styles1.css" rel="stylesheet" />
-    </head>
+           </head>
     <body>
         <div class="d-flex" id="wrapper">
             <!-- Sidebar-->
@@ -39,7 +38,7 @@
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Shortcuts</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="info.html">Profile</a>
+                    <!-- <a class="list-group-item list-group-item-action list-group-item-light p-3" href="info.html">Profile</a> -->
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
                   </div>
                       </div>
