--- a/sign up.html
+++ b/sign up.html
@@ -4,36 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-   <link rel="stylesheet" type="text/css" href="css/style1.css">
-    <link rel="stylesheet" type="text/css" href="css/demo.css">
+    <title>Signup</title>
+   <link href="style.css" rel="stylesheet">
+    <link href="background/background.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Name</h1><input type="text" id="name" placeholder="name"> <li class="rq"> * Enter alphabets only.</li><br>
-    <br>
-    <h1>Email</h1><input type="email" id="email" placeholder="Email" maxlength="10"/><br>
-    <br>
-    <h1>Phone number</h1><input type="number" id="number" placeholder="Phone number"><br>
-    <br>
-    <h1>Password</h1><input id ="password" type="password" placeholder="password"><br>
-    <br>
-    <h1>Confirm password</h1><input id="confirmpassword" type="password" placeholder="Confirm password"><br>
-    <br>
-    <script src="js/allLetter.js"> </script>
-    <!-- <button type="button" id="button2" ><a href="index.js">Sign up</a></button>
-    <script src="index.js"></script>
-    <button type="button" id="increment-btn" onclick="increment()">INCREMENT</button>
-       -->
-       <div class="container-login100-form-btn">
-        <div class="wrap-login100-form-btn">
-        <div class="login100-form-bgbtn"></div>
-        <button class="login100-form-btn">
-       
-        <a href="main.html">Sign up</a> 
-        </button>
-        </div>
-        </div>
-        <br>
-        </body>
+    <div class="bubbles">
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+
+        <div class="contener">
+            <form>
+                <input class="input1" type="text" placeholder="Name" required>
+                <p></p>
+                <input class="input1" type="email" placeholder="Email" required>
+                <p></p>
+                <input class="input1" type="number" placeholder="phone" seleted="+251" required>
+                <p></p>
+                <input class="input1" type="password" placeholder="Password" required>
+                <p></p>
+                <input class="input1" type="password" placeholder="Password Confirm" required>
+                <p></p>
+                <button class="signup12" onclick="window.location.href='main.html'">
+                    Sign up
+                </button>
+                <p class="p11">i have an account?<a href="index.html">Login</a></p>
+                </form>
+        </div>  </div>
+</body>
 </html>
